# shining-engine

./: .gitignore  Cargo.toml
crates/audio/: Cargo.toml
crates/audio/src/: consumer.rs  lib.rs  producer.rs  tests.rs
crates/camera/: Cargo.toml
crates/camera/src/: lib.rs  player.rs
crates/control/: Cargo.toml
crates/control/src/: io.rs  lib.rs  user.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: lib.rs  manager.rs  table.rs  tests.rs
crates/ecs/src/resource_types/: bearer.rs  mod.rs
crates/engine/: Cargo.toml
crates/engine/src/: core.rs  lib.rs
crates/engine/src/camera/: player.rs
crates/engine/src/internals/: mod.rs
crates/engine/src/renderable/: mod.rs  null.rs  stock.rs
crates/engine/src/scene/: mod.rs  null.rs  stock.rs
crates/engine/src/timer/: mod.rs  stock.rs
crates/engine/tests/: engine_test.rs  passes_custom_commands.rs
crates/error/src/: lib.rs
crates/model/: Cargo.toml  USAGE.md
crates/model/src/: config.rs  factory.rs  lib.rs  tests.rs  types.rs
crates/model/src/collada/: elements.rs  mod.rs
crates/model/src/files/: parser.rs
crates/resource/: Cargo.toml
crates/resource/src/: bearer.rs  describe.rs  handle.rs  lib.rs  loader.rs  manager.rs  table.rs  tests.rs
crates/resource/src/loader/: mod.rs  null.rs
crates/vk/: Cargo.toml
crates/vk/src/: lib.rs
crates/vk/src/context/: device.rs  mod.rs  queues.rs  swapchain.rs
crates/vk/src/core/: instance.rs  mod.rs  physical_device.rs
crates/vk/src/mem/: buffer.rs  image.rs  mod.rs  transfer.rs
crates/vk/src/pipeline/: mod.rs  renderpass.rs  wrapper.rs
crates/vk/src/resource/: buffer.rs  image.rs  mod.rs  util.rs
crates/vk/tests/: feature_test.rs  mem_test.rs  pipeline_test.rs
crates/vk_renderer/: Cargo.toml
crates/vk_renderer/src/: lib.rs
crates/vk_renderer/src/context/: device.rs  mod.rs  present.rs  queues.rs  swapchain.rs
crates/vk_renderer/src/core/: debug.rs  instance.rs  mod.rs  physical_device.rs
crates/vk_renderer/src/mem/: buffer.rs  image.rs  mod.rs  transfer.rs
crates/vk_renderer/src/pipeline/: offscreen_framebuffer.rs  renderpass.rs  wrapper.rs
crates/vk_renderer/src/resource/: buffer.rs  image.rs  mod.rs  util.rs
crates/vk_renderer/tests/: context_test.rs  core_test.rs  mem_test.rs  pipeline_test.rs
crates/window/: Cargo.toml
crates/window/src/: event.rs  lib.rs  window.rs
crates/window/tests/: closes_on_command.rs  passes_custom_commands.rs  user_close.rs
examples/test-app/: Cargo.toml
examples/test-app/src/: main.rs
resources/test/models/: Cubes.dae  Cubes.toml
resources/test/shaders/: simple.frag  simple.vert  stock.frag  stock.vert
