
[workspace]
members = ["crates/*", "examples/*"]

[workspace.dependencies]
ash = { version = "0.37.2+1.3.238", default-features = false, features = ["linked", "debug"] }
ash-window = "0.12.0"
vk-shader-macros = "0.2.8"
winit = "0.28.1"
raw-window-handle = "0.5.0"
serde = "1.0.145"
serde-xml-rs = "0.6.0"
