[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { workspace = true }
vk-shader-macros = { workspace = true }
cgmath = { workspace = true }
camera = { path = "../camera" }
control = { path = "../control" }
model = { path = "../model" }
resource = { path = "../resource" }
vk_renderer = { path = "../vk_renderer" }
window = { path = "../window" }

[[test]]
name = "engine_test"
path = "tests/engine_test.rs"
harness = false

[[test]]
name = "passes_custom_commands"
path = "tests/passes_custom_commands.rs"
harness = false
