[package]
name = "vk"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { workspace = true }
ash-window = { workspace = true }
raw-window-handle = { workspace = true }
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] }
model = { path = "../model" }
resource = { path = "../resource" }

[dev-dependencies]
vk = { path = "." }
window = { path = "../window" }

[[test]]
name = "core_test"
path = "tests/core_test.rs"
harness = false

[[test]]
name = "context_test"
path = "tests/context_test.rs"
harness = false

[[test]]
name = "mem_test"
path = "tests/mem_test.rs"
harness = false

[[test]]
name = "pipeline_test"
path = "tests/pipeline_test.rs"
harness = false
