[package]
name = "vk"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { workspace = true }
ash-window = { workspace = true }
raw-window-handle = { workspace = true }
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] }
model = { path = "../model" }
resource = { path = "../resource" }

[dev-dependencies]
vk = { path = "." }
window = { path = "../window" }

[[test]]
name = "feature_test"
path = "tests/feature_test.rs"
harness = false
