[package]
name = "window"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.26.1"

[dev-dependencies]
window = { path = "." }

[[test]]
name = "closes_on_command"
path = "tests/closes_on_command.rs"
harness = false

[[test]]
name = "passes_custom_commands"
path = "tests/passes_custom_commands.rs"
harness = false
