[package]
name = "window"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { workspace = true }
raw-window-handle = { workspace = true }

[dev-dependencies]
window = { path = "." }
resource = { path = "../resource" }

[[test]]
name = "user_close"
path = "tests/user_close.rs"
harness = false
